# CrossMalViT

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
configs/data/: kaggle_malware.yaml
configs/experiment/: ablation_fusion.yaml  ablation_loss.yaml  ablation_views.yaml  main_experiment.yaml
configs/model/: crossmal_vit_base.yaml
configs/optimizer/: bbbc_default.yaml
configs/training/: contrastive_pretrain.yaml  default.yaml  supervised_finetune.yaml
crossmal_vit/: __init__.py
crossmal_vit/data/: __init__.py  datamodule.py
crossmal_vit/evaluation/: __init__.py  calibration.py  confusion_matrix.py  metrics.py
crossmal_vit/losses/: __init__.py  class_balanced_loss.py  combined_loss.py  contrastive_loss.py  focal_loss.py  ldam_loss.py
crossmal_vit/models/: __init__.py  classification_head.py  cross_attention.py  crossmal_vit.py  fusion.py  vit_encoder.py
crossmal_vit/optimization/: __init__.py  bbbc.py  fitness_evaluator.py  population.py  search_space.py
crossmal_vit/training/: __init__.py  lightning_module.py  trainer.py
crossmal_vit/utils/: __init__.py  checkpoint.py  config.py  logging.py  seed.py
crossmal_vit/visualization/: __init__.py  attention_maps.py  grad_cam.py  training_curves.py  tsne.py
deployment/gradio_app/: app.py  requirements.txt
deployment/torchserve/: handler.py  model-archiver.sh
docker/: Dockerfile  Dockerfile.inference  docker-compose.yml
docs/: api_reference.md  index.md  installation.md  quickstart.md
notebooks/: 01_data_exploration.ipynb  02_multi_view_generation.ipynb  03_model_architecture.ipynb  04_training_demo.ipynb  05_evaluation_analysis.ipynb
pretrained/: README.md  download_weights.py
scripts/: benchmark_speed.py  evaluate.py  export_onnx.py  generate_views.py  optimize_bbbc.py  predict.py  preprocess_data.py  reproduce_paper.py  train.py  visualize_attention.py
tests/: __init__.py  conftest.py
tests/test_data/: test_transforms.py
tests/test_losses/: test_all_losses.py
(+26 files in other folders)
